tests/negative/divide_by_zero.xs
-- EXPECT_RUNTIME_ERROR
let x = 1 / 0
println(x)
